images in logogrid have not to be inline to avoid buggy spacing below them in div

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ body>.img>img {
 
 .logogrid img {
     width: 100%;
+    display: block;
 }
 
 .canvasWrapper {
